# az-ai

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
az_ai/: cli.py  logs.py  util.py
tests/: test_example.py
